--- a/index.html
+++ b/index.html
@@ -120,10 +120,18 @@
 <script>
 const universities = [
   {name: "復旦大学", catchcopy: "復旦にある大学", img: "https://yusuke-nakama.github.io/University-Search/Fudan.jpg", url: "#"},
+  {name: "南京大学", catchcopy: "南京にある大学", img: "https://yusuke-nakama.github.io/University-Search/Nanjing.jpg", url: "#"},
   {name: "香港大学", catchcopy: "香港にある大学", img: "https://yusuke-nakama.github.io/University-Search/HKU.jpg", url: "#"},
   {name: "高麗大学校",catchcopy: "韓国の大学",img: "https://yusuke-nakama.github.io/University-Search/Korea.jpg", url: "#"},
   {name: "ソウル大学校", catchcopy: "ソウルにある大学", img: "https://yusuke-nakama.github.io/University-Search/SNU.jpg", url: "#"},
   {name: "浦項工科大学校",catchcopy: "浦項にある大学", img: "https://yusuke-nakama.github.io/University-Search/POSTECH.jpg", url: "#"},
+  {name: "スウァスモアカレッジ", catchcopy: "フィラデルフィアの大学", img: "https://yusuke-nakama.github.io/University-Search/Swarthmore.jpeg", url: "#"},
+  {name: "アデレード大学", catchcopy: "アデレードの大学",img: "https://yusuke-nakama.github.io/University-Search/Adelaide.png", url: "#"},
+  {name: "パリ政治学院", catchcopy: "パリの大学",img: "https://yusuke-nakama.github.io/University-Search/SC.jpeg", url: "#"},
+  {name: "ライデン大学", catchcopy: "ライデンの大学", img: "https://yusuke-nakama.github.io/University-Search/Leiden.png", url: "#"},
+  {name: "ルンド大学", catchcopy: "ルンドの大学", img: "https://yusuke-nakama.github.io/University-Search/Lund.jpg", url: "#"},
+  {name: "ダラム大学", catchcopy: "ダラムの大学", img: "https://yusuke-nakama.github.io/University-Search/Durham.jpg", url: "#"}
+  
 ];
 
 /* Fisher–Yates でしっかりランダム */
