--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 const universities = [
   {name: "復旦大学", catchcopy: "復旦にある大学", img: "https://yusuke-nakama.github.io/University-Search/Fudan.jpg", url: "https://sites.google.com/d/1y-I5vzS-IWcsZhrteldpAZpXKZePR3IX/p/14yBymdJDQlPmr5GX2RPGnQIagzfpSLXY/edit"},
   {name: "南京大学", catchcopy: "南京にある大学", img: "https://yusuke-nakama.github.io/University-Search/Nanjing.jpg", url: "https://sites.google.com/d/1y-I5vzS-IWcsZhrteldpAZpXKZePR3IX/p/14yBymdJDQlPmr5GX2RPGnQIagzfpSLXY/edit"},
-  {name: "香港大学", catchcopy: "香港にある大学", img: "https://yusuke-nakama.github.io/University-Search/HKU.jpg", url: "https://sites.google.com/d/1y-I5vzS-IWcsZhrteldpAZpXKZePR3IX/p/14yBymdJDQlPmr5GX2RPGnQIagzfpSLXY/edit"},
+  {name: "香港大学", catchcopy: "香港トップの総合大学", img: "https://yusuke-nakama.github.io/University-Search/HKU.jpg", url: "https://sites.google.com/d/1y-I5vzS-IWcsZhrteldpAZpXKZePR3IX/p/14yBymdJDQlPmr5GX2RPGnQIagzfpSLXY/edit"},
   {name: "高麗大学校",catchcopy: "韓国の大学",img: "https://yusuke-nakama.github.io/University-Search/Korea.jpg", url: "https://sites.google.com/d/1y-I5vzS-IWcsZhrteldpAZpXKZePR3IX/p/14yBymdJDQlPmr5GX2RPGnQIagzfpSLXY/edit"},
   {name: "ソウル大学校", catchcopy: "ソウルにある大学", img: "https://yusuke-nakama.github.io/University-Search/SNU.jpg", url: "https://sites.google.com/d/1y-I5vzS-IWcsZhrteldpAZpXKZePR3IX/p/14yBymdJDQlPmr5GX2RPGnQIagzfpSLXY/edit"},
   {name: "浦項工科大学校",catchcopy: "浦項にある大学", img: "https://yusuke-nakama.github.io/University-Search/POSTECH.jpg", url: "https://sites.google.com/d/1y-I5vzS-IWcsZhrteldpAZpXKZePR3IX/p/14yBymdJDQlPmr5GX2RPGnQIagzfpSLXY/edit"},
