--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ const universities = [
   {name: "パリ政治学院", catchcopy: "パリの大学",img: "https://yusuke-nakama.github.io/University-Search/SC.jpeg", url: "#"},
   {name: "ライデン大学", catchcopy: "ライデンの大学", img: "https://yusuke-nakama.github.io/University-Search/Leiden.png", url: "#"},
   {name: "ルンド大学", catchcopy: "ルンドの大学", img: "https://yusuke-nakama.github.io/University-Search/Lund.jpg", url: "#"},
-  {name: "ダラム大学", catchcopy: "ダラムの大学", img: "https://yusuke-nakama.github.io/University-Search/Durham.jpg", url: "#"}
+  {name: "ダラム大学", catchcopy: "ダラムの大学", img: "https://yusuke-nakama.github.io/University-Search/Durham.jpg", url: "#"},
   {name: "モナシュ大学", catchcopy: "モナシュの大学", img: "https://yusuke-nakama.github.io/University-Search/monash.jpg", url: "#"}
 ];
 
