--- a/index.html
+++ b/index.html
@@ -131,7 +131,8 @@ const universities = [
   {name: "ライデン大学", catchcopy: "ライデンの大学", img: "https://yusuke-nakama.github.io/University-Search/Leiden.png", url: "#"},
   {name: "ルンド大学", catchcopy: "ルンドの大学", img: "https://yusuke-nakama.github.io/University-Search/Lund.jpg", url: "#"},
   {name: "ダラム大学", catchcopy: "ダラムの大学", img: "https://yusuke-nakama.github.io/University-Search/Durham.jpg", url: "#"},
-  {name: "モナシュ大学", catchcopy: "モナシュの大学", img: "https://yusuke-nakama.github.io/University-Search/monash.jpg", url: "#"}
+  {name: "モナシュ大学", catchcopy: "モナシュの大学", img: "https://yusuke-nakama.github.io/University-Search/monash.jpg", url: "#"},
+  {name: "エルサレム・ヘブライ大学", catchcopy: "エルサレムの大学", img: "https://yusuke-nakama.github.io/University-Search/HUJ.jpg", url: "#"},
 ];
 
 /* Fisher–Yates でしっかりランダム */
